# Vogen

./: .gitignore  README.md  dialog.pyi  install.bat  main.py  main.spec  pyproject.toml
