[project]
name = "Vogen"
version = "1.2.0"
description = "AI-powered text-to-speech tool with voice selection"
authors = [{ name = "DogeCN", email = "hark2009lbf@outlook.com" }]
dependencies = [
    "pocket-tts>=1.1.0",
    "scipy>=1.17.0",
    "rich>=14.3.2",
    "keyboard>=0.13.5",
    "librosa>=0.11.0",
    "miniaudio>=1.61",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[dependency-groups]
dev = ["pyinstaller>=6.19.0"]
